# RSSFeedNotifier

./: .gitignore  CMakeLists.txt  Makefile  README.md  RSSParser.cpp  test.xml
cmake/: FindTinyXML2.cmake
